--- a/lune_nu/style.css
+++ b/lune_nu/style.css
@@ -15,7 +15,7 @@ This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 */
 
-@import url('https://fonts.googleapis.com/css?family=Raleway');
+@import url('https://fonts.googleapis.com/css?family=Cairo|Raleway&subset=arabic');
 
 /*--------------------------------------------------------------
 >>> TABLE OF CONTENTS:
@@ -420,7 +420,7 @@ input,
 select,
 textarea {
 	color: #333;
-	font-family: "Raleway", "Libre Franklin", "Helvetica Neue", helvetica, arial, sans-serif;
+	font-family: "Raleway", "Cairo", "Libre Franklin", "Helvetica Neue", helvetica, arial, sans-serif;
 	font-size: 15px;
 	font-size: 0.9375rem;
 	font-weight: 400;
@@ -617,7 +617,7 @@ html[lang="ur"] button,
 html[lang="ur"] input,
 html[lang="ur"] select,
 html[lang="ur"] textarea {
-	font-family: Tahoma, Arial, sans-serif;
+	font-family: "Cairo", Tahoma, Arial, sans-serif;
 }
 
 html[lang="ar"] h1,
@@ -1057,24 +1057,24 @@ input[type="submit"].secondary:focus {
 /* Placeholder text color -- selectors need to be separate to work. */
 ::-webkit-input-placeholder {
 	color: #333;
-	font-family: "Raleway", "Libre Franklin", "Helvetica Neue", helvetica, arial, sans-serif;
+	font-family: "Raleway", "Cairo", "Libre Franklin", "Helvetica Neue", helvetica, arial, sans-serif;
 }
 
 :-moz-placeholder {
 	color: #333;
-	font-family: "Raleway", "Libre Franklin", "Helvetica Neue", helvetica, arial, sans-serif;
+	font-family: "Raleway", "Cairo", "Libre Franklin", "Helvetica Neue", helvetica, arial, sans-serif;
 }
 
 ::-moz-placeholder {
 	color: #333;
-	font-family: "Raleway", "Libre Franklin", "Helvetica Neue", helvetica, arial, sans-serif;
+	font-family: "Raleway", "Cairo", "Libre Franklin", "Helvetica Neue", helvetica, arial, sans-serif;
 	opacity: 1;
 	/* Since FF19 lowers the opacity of the placeholder by default */
 }
 
 :-ms-input-placeholder {
 	color: #333;
-	font-family: "Raleway", "Libre Franklin", "Helvetica Neue", helvetica, arial, sans-serif;
+	font-family: "Raleway", "Cairo", "Libre Franklin", "Helvetica Neue", helvetica, arial, sans-serif;
 }
 
 /*--------------------------------------------------------------
