--- a/lune_nu/style.css
+++ b/lune_nu/style.css
@@ -1416,6 +1416,34 @@ a:hover .nav-title,
 	color: #767676;
 }
 
+.navigation-top .custom-logo-link {
+	display:none;
+	float:left;
+}
+/*.site-branding .custom-logo-link {
+	display:none;
+}*/
+.site-navigation-fixed .custom-logo-link {
+	display:block;
+}
+
+/*make the logo in the navigation smaller*/
+.site-navigation-fixed .custom-logo {
+	width: 3rem;
+}
+
+/*.site-navigation-fixed instead of .navigation-top*/
+.site-navigation-fixed #site-navigation{
+	clear:none;
+	float:left;
+}
+
+@media screen and (max-width: 800px) {
+    .site-navigation-logo {
+        display: none
+    }
+}
+
 /* Menu toggle */
 
 .menu-toggle {
